Archive2/54/79d43cfaddd761/output
main.cpp:1:1: error: 'sdfsd' does not name a type
 sdfsd sdfsdf
 ^
